# ros_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml
description/urdf/: robot_with_sensors.xacro  robot_with_sensors_ukf.xacro  sensor_suite.xacro
include/: UKF.h  Utils.h  imu_plugin.h  sensor.h  sensor_noise.h  state_estimation_node.h
launch/: README.md  mav_hovering_demo.launch  mav_hovering_demo_ukf.launch  mav_spawn.launch
resource/: state_estimation_node_topics_firefly.yaml
scripts/: process_rosbag.py  ros_readbagfile.py
src/: UKF.cpp  data_logger.cpp  imu_plugin.cpp  state_estimation_node.cpp
