<?xml version="1.0"?>
<package format="2">
  <name>ros_demo</name>
  <version>0.0.0</version>
  <description>The ros_demo package</description>

  <maintainer email="chandrusuresh@gmail.com"></maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">https://github.com/chandrusuresh/ros_demo</url>
  <author email="chandrusuresh@gmail.com"></author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rotors_gazebo_plugins</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rotors_gazebo_plugins</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rotors_gazebo_plugins</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
